# vitaMania

./: .gitignore  CMakeLists.txt  README.md
assets/skin/: skin.ini
src/: main.cpp
tools/: convert_ogg_audio.sh
